fix label img compare alignments

--- a/static/style.css
+++ b/static/style.css
@@ -706,6 +706,9 @@ img-comparison-slider>figure>img {
     width: 100%;
 }
 
+img-comparison-slider {
+    display: flex;
+}
 
 /* For upload pbar */
 progress {
